--- a/ex-gen-app/package.json
+++ b/ex-gen-app/package.json
@@ -14,6 +14,7 @@
     "express-session": "^1.18.0",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
+    "sqlite3": "^5.1.7",
     "xml2js": "^0.6.2"
   }
 }
