--- a/document_app/package.json
+++ b/document_app/package.json
@@ -15,6 +15,7 @@
     "express-session": "^1.18.0",
     "express-validator": "^7.1.0",
     "http-errors": "~1.6.3",
+    "markdown-it": "^14.1.0",
     "morgan": "~1.9.1",
     "sqlite3": "^5.1.7",
     "xml2js": "^0.6.2"
